@@ -1,3 +1,7 @@
+2017-11-06 Magnus Hagdorn
+ * piccolo2/player/__init__.py: set __version__
+  * setup.py: get version from hg tag
+
 2017-02-27 Magnus Hagdorn
  * piccolo2/player/PlayerApp.py: fail gracefully if player becomes
    disconnected
